# Nyx

./: Makefile  README.md
KVM-PT/: .gitignore  Kconfig  Makefile.template  README  cpuid.c  cpuid.h  debugfs.c  emulate.c  hyperv.c  i8254.c  i8254.h  i8259.c  ioapic.c  ioapic.h  irq.c  irq.h  irq_comm.c  lapic.c  lapic.h  load.sh  mmu.c  mmu.h  mtrr.c  page_track.c  paging_tmpl.h  pmu.c  pmu_amd.c  pmu_intel.c  vmx.c  vmx.h  vmx_fdl.c  (+5 more)
nyx_fuzzer/fuzz_runner/: Cargo.toml
nyx_fuzzer/fuzz_runner/src/: exitreason.rs  lib.rs
nyx_fuzzer/fuzz_runner/src/forksrv/: error.rs  mod.rs  newtypes.rs
nyx_fuzzer/fuzz_runner/src/nyx/: aux_buffer.rs  mem_barrier.rs  mod.rs  params.rs  qemu_process.rs
nyx_fuzzer/rust_fuzzer/: Cargo.toml  config.ron  config_forkserver.ron  config_kernel.ron  config_snapshot.ron  config_snapshot_cluster_ubuntu.ron  deploy.sh  spec.msgp
nyx_fuzzer/rust_fuzzer/src/: bitmap.rs  fuzzer.rs  input.rs  main.rs  queue.rs  romu.rs
nyx_fuzzer/rust_fuzzer_debug/: Cargo.toml
nyx_fuzzer/rust_fuzzer_debug/src/: main.rs
nyx_fuzzer/structured_fuzzer/: .gitignore  Cargo.toml
nyx_fuzzer/structured_fuzzer/examples/: display.rs  gen.rs
nyx_fuzzer/structured_fuzzer/interpreter/: example_spec.msgp  example_spec.py  spec_vec_u8.msgp  spec_vec_u8.py  test_spec.msgp  test_spec.py
nyx_fuzzer/structured_fuzzer/interpreter/spec_lib/: data_spec.py  generators.py  graph_builder.py  graph_spec.py
nyx_fuzzer/structured_fuzzer/interpreter/spec_lib/templates/: bytecode_spec.jinja.h  data_include.jinja.h  data_struct.jinja.h  interpreter.jinja.h
nyx_fuzzer/structured_fuzzer/src/: custom_dict.rs  data_buff.rs  lib.rs  mutator.rs
nyx_fuzzer/structured_fuzzer/src/graph_mutator/: atomic_data.rs  generators.rs  graph_builder.rs  graph_iter.rs  graph_storage.rs  mod.rs  newtypes.rs  spec.rs  spec_loader.rs
nyx_fuzzer/structured_fuzzer/src/primitive_mutator/: inplace_mutation.rs  mod.rs  mutations.txt  mutator.rs  size_changing_mutation.rs
nyx_fuzzer/structured_fuzzer/src/random/: choices.rs  distributions.rs  mod.rs  romu.rs
(+71 files in other folders)
