[package]
name = "structured_fuzzer"
version = "0.1.0"
authors = ["coco <cornelius@hexgolems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_core="0.5.1"
serde ="1.0.104"
serde_derive ="1.0.104"
rmp-serde ="0.14.3"
itertools="0.9.0"

[dev-dependencies]
clap="2.33.0"
